Little frontend features

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,9 +4,9 @@
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
 
-  --vt-c-black: green;
-  --vt-c-black-soft: lightgreen;
-  --vt-c-black-mute: green;
+  --vt-c-black: seagreen;
+  --vt-c-black-soft: seagreen;
+  --vt-c-black-mute: seagreen;
 
   --vt-c-indigo: #2c3e50;
 
