--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,6 +15,13 @@ a,
   padding: 3px;
 }
 
+.action-buttons button {
+  margin-right: 10px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
